--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 8080
-CLIENT_ID = '1097965274780-1kstlnt1lqh3kmu6shlt6bqk8hd7t68t.apps.googleusercontent.com'
-DATABASE_URL = "postgresql://hoannguyendigino_gma:iSltZJAu4gvqPv1VbRYVnA@round-dibbler-5752.6xw.cockroachlabs.cloud:26257/clubfinderdb?sslmode=verify-full"
+CLIENT_ID = 
+DATABASE_URL = 
